# sgd-old

./: SGD.hs  sgd.cabal
Data/: MarkedArray.hs
SGD/: Base.hs
