Name:               sgd
Version:            0.0.0
Synopsis:           Stochastic gradient descent library.
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.MarkedArray
                    SGD
Other-modules:      SGD.Base
Build-Depends:      base
                  , vector
                  , array
                  , ListLike
                  , random
